--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Caveat", cursive;
+  font-size: 24px !important;
+  font-weight: 800 !important;
+}
 
 .container-img {
   width: 1400px;
