--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,10 +1,8 @@
-<div
-  class="px-10 py-6 text-lg font-bold text-gray-100 border-b shadow-xl"
-  style=""
->
+<div class="px-10 py-6 text-gray-100 border-b shadow-xl">
   <div class="container flex items-center justify-between mx-auto">
     <div>
       <a
+        class="cursor-pointer"
         style="
           background: -webkit-linear-gradient(
             130deg,
@@ -22,6 +20,7 @@
     </div>
     <div>
       <a
+        class="cursor-pointer"
         style="
           background: -webkit-linear-gradient(
             130deg,
