update images and performance

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -30,6 +30,7 @@
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
         "
+        (click)="aboutme()"
         >About Me</a
       >
     </div>
