--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <app-header />
 <section class="pb-10 container-img">
-  @for (item of imageArray; track item.id) { @defer (on viewport) {
+  @for (item of zahraCar; track item.id) { @defer (on viewport) {
+  <div class="box" (click)="openDialog(item)">
+    <img [src]="item.img" alt="" />
+  </div>
+  }@placeholder {
+  <div class="h-96">Loading...</div>
+  } } @for (item of imageArray; track item.id) { @defer (on viewport) {
   <div class="box" (click)="openDialog(item)">
     <img [src]="item.img" alt="" />
   </div>
